[tool.poetry]
name = "kodinerds-iptv"
version = "0.1.0"
description = "Free TV and radio streams for Kodi."
authors = ["Jannik Schäfer <jannik.schaefer@inbox-online.de>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
ruff = "^0.0.231"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["ALL"]
target-version = "py310"
extend-ignore = ["ANN101", "ANN102", "COM812"]
unfixable = ["T201", "T203", "F401"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]
"generate_lists.py" = ["T201", "T203", "INP001"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.vulture]
min_confidence = 100
paths = ["src"]
sort_by_size = true
